[package]
name = "truba"
version = "0.1.3"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/noogen-projects/truba"
description = "The minimal tokio runtime based actors for Rust"
keywords = ["async", "actor", "tokio", "simple"]
categories = ["asynchronous"]

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
typemap-ors = "1.0"
parking_lot = "0.12"